Draw nicer arrows when the scrollbar buttons are not square.

Before they would look squished or messed up, but with this patch
their bounding box is always square so we'll get the nice pixel pyramids
that we want. This shouldn't change anything visually for the normal
square scrollbar buttons.

BUG=614297

Review-Url: https://codereview.chromium.org/2009733002
Cr-Commit-Position: refs/heads/master@{#399626}

Former-commit-id: 91cbc6d7c2f02771ee3640a4b2f3376029b3bab0